--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "gulp-sourcemaps": "^2.6.0",
     "isparta": "^4.0.0",
     "jest": "^20.0.3",
+    "json-loader": "^0.5.7",
     "regenerator-runtime": "^0.10.5",
     "require-dir": "^0.3.2",
     "run-sequence": "^1.1.5",
